# apm

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EPIC.md  LICENSE  README.md  REFACTOR-CORE.md  apm.agents.md  apm.toml  notes.md  refactor-tickets.sh
.apm/: .gitignore  agents.md  apm.spec-writer.md  apm.worker.md  config.toml  project.md  style.md  workflow.toml
.claude/: settings.json
.github/: CLA.md
.github/workflows/: ci.yml  cla.yml  release.yml
apm/: Cargo.toml  build.rs
apm-core/: Cargo.toml
apm-core/src/: agents.rs  apm.agents.md  apm.spec-writer.md  apm.worker.md  archive.rs  clean.rs  config.rs  context.rs  credentials.rs  denial.rs  epic.rs  git.rs  git_util.rs  github.rs  hash_stamp.rs  help_schema.rs  identity.rs  init.rs  instructions.rs  lib.rs  logger.rs  prompt.rs  recovery.rs  review.rs  spec.rs  start.rs  state.rs  sync.rs  sync_guidance.rs  ticket.rs  validate.rs  verify.rs  work.rs  worker.rs  workflow.toml  worktree.rs
apm-core/src/default/: apm.agents.md  apm.spec-writer.md  apm.worker.md  ticket.toml  workflow.toml
apm-core/src/default/agents/claude/: apm.coder.md  apm.main-agent.md  apm.spec-writer.md  apm.worker.md
apm-core/src/default/agents/debug/: apm.spec-writer.md
apm-core/src/default/agents/default/: agents.md  apm.main-agent.md  apm.project.md  apm.spec-writer.md  apm.worker.md
apm-core/src/ticket/: ticket_fmt.rs  ticket_util.rs
apm-core/src/wrapper/: claude.rs  custom.rs  hook_config.rs  mod.rs  path_guard.rs
apm-core/src/wrapper/builtin/: claude.rs  debug.rs  mock_happy.rs  mock_random.rs  mock_sad.rs  mod.rs
apm-core/tests/: agents_integration.rs  custom_wrapper_integration.rs  path_guard_integration.rs  spec_writer_md_sync.rs  sync_local_ticket_refs.rs  ticket_create.rs  verify.rs  worker_md_sync.rs
apm-core/tests/fixtures/: transcript_apm_denial.jsonl  transcript_no_denials.jsonl  transcript_outside_worktree.jsonl
apm-proxy/: Dockerfile  README.md  entrypoint.sh  nginx.conf  nginx.conf.template
apm-server/: Cargo.toml  build.rs
apm-server/src/: agents.rs  auth.rs  credential_store.rs  log.rs  login.html  main.rs  models.rs  pem.rs  queue.rs  register.html  tls.rs  util.rs  webauthn_state.rs  work.rs  workers.rs
apm-server/src/handlers/: epics.rs  maintenance.rs  mod.rs  tickets.rs  workflow.rs
apm-ui/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
apm-ui/src/: App.tsx  index.css  lucide-react.d.ts
apm/src/: ctx.rs  editor.rs  hash_trip.rs  lib.rs  main.rs  util.rs
apm/src/cmd/: agents.rs  archive.rs  assign.rs  clean.rs  close.rs  epic.rs  help.rs  hook.rs  init.rs  instructions.rs  list.rs  move_ticket.rs  new.rs  next.rs  path_guard.rs  prompt.rs  register.rs  review.rs  revoke.rs  sessions.rs  set.rs  show.rs  spec.rs  start.rs  state.rs  sync.rs  take.rs  validate.rs  verify.rs  version.rs  work.rs  workers.rs  worktrees.rs
apm/tests/: README.md  e2e.rs  integration.rs  validate_fix.rs
archive/initial_specs/: SPEC.md  STATE-MACHINE.md  TICKET-LIFECYCLE.md  TICKET-SPEC.md  UI_spec_review.md  epics.md
archive/tickets/: 0004-implement-apm-sync-merge-detection.md  0005-add-apm-verify-integrity-checks.md  0007-implement-apm-start-branch-creation-git-.md  0008-implement-apm-hook-pre-push-branch-push-.md  0009-implement-apm-take-agent-handoff.md  0014-bug-invalid-state-accepted-with-command-.md  0017-apm-sync-missing-quiet-and-offline-flags.md  0018-apm-init-default-config-missing-workflow.md  0019-apm-list-shows-closed-tickets-by-default.md  0020-apm-state-enforces-valid-transitions-fro.md  0021-commit-to-branch-writes-ticket-files-to-.md  0033-add-logging.md  (+381 more)
docs/: agent-wrappers.md  commands.md  docker-workers.md  external-tls-setup.md  mcp-server-spec.md  merge-failed-recovery.md  ownership-spec.md  strategy-and-dependencies.md
initial_specs/: COMMANDS.md  DESIGN-users.md  EPICS-AND-DEPENDENCIES.md  IMPLEMENTATION-PLAN.md  LINEAR-ANALYSIS.md  LINEAR-GAPS.md  PR-REVIEW-AGENT.md  SPEC.md  STATE-MACHINE.md  TICKET-SPEC.md  UIdraft_spec_starter.md  USECASES.md  notes.md
scripts/: create-demo.sh  install.sh  migrate-ticket-ids.sh  post-release.sh  proxy-build.sh  proxy-deploy.sh  proxy-local.sh  record-demo.sh  release.sh  uninstall.sh
tickets/: 0001-add-unit-tests-for-ticket-parsing.md  0002-add-integration-tests-for-cli-commands.md  0003-implement-apm-start-git-mutex.md  0004-implement-apm-sync-merge-detection.md  0005-add-apm-verify-integrity-checks.md  0006-add-author-and-supervisor-fields-to-tick.md  0007-implement-apm-start-branch-creation-git-.md  0008-implement-apm-hook-pre-push-branch-push-.md  0009-implement-apm-take-agent-handoff.md  0010-add-apm-agents-command-print-agent-instr.md  0011-implement-apm-init-hooks-install-git-hoo.md  0012-apm-init-should-add-apm-commands-to-clau.md  0013-apm-state-ammend-should-ensure-amendment.md  0014-bug-invalid-state-accepted-with-command-.md  0015-apm-detects-git-worktree-and-commits-tic.md  0016-apm-uses-git-plumbing-to-commit-ticket-c.md  0017-apm-sync-missing-quiet-and-offline-flags.md  0018-apm-init-default-config-missing-workflow.md  0019-apm-list-shows-closed-tickets-by-default.md  0020-apm-state-enforces-valid-transitions-fro.md  0021-commit-to-branch-writes-ticket-files-to-.md  0022-defer-branch-push-from-commit-to-branch-.md  0025-default-branch-config-init.md  0027-missing-state-machine-definitino.md  0028-pre-push-hook-passes-extra-args-to-apm-h.md  0029-warn-if-claude-settings-json-is-not-git-.md  0030-add-blocked-state-agent-signals-implemen.md  0031-add-agent-behavior-new-ticket.md  0032-apm-ticket-format-in-core.md  0033-add-logging.md  0034-new-command-take-free-text.md  0035-github-apm-meta.md  0036-push-pull-agressive-mode.md  0037-apm-start-spawns-claude-worker-subproces.md  0038-docker-sandbox-for-apm-worker-processes.md  0039-apm-sync-closes-terminal-tickets-in-bulk.md  0040-log-to-platform-default-location-instead.md  0041-configurable-merge-strategy-for-implemen.md  0042-need-an-option-on-apm-list-to-show-all-c.md  0043-make-log-file-path-configurable-via-apm-.md  (+496 more)
(+55 files in other folders)
