[workspace]
members = [
    "apm-core",
    "apm",
    "apm-server",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = [] }
include_dir = "0.7"
mime_guess = "2"

[patch.crates-io]
rustls-acme = { path = "patches/rustls-acme" }
