[workspace]
members = [
    "apm-core",
    "apm",
    "apm-server",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "2", features = ["json"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = [] }
include_dir = "0.7"
mime_guess = "2"

[profile.release]
lto = true
strip = true
opt-level = "z"