[workspace]
members = [
    "apm-core",
    "apm",
    "apm-server",
]
resolver = "2"

[workspace.package]
version = "0.1.9"
edition = "2021"
license = "BUSL-1.1"
authors = ["Philippe Pascal"]
repository = "https://github.com/philippepascal/apm"
homepage = "https://philippepascal.com/lab/apm"
documentation = "https://github.com/philippepascal/apm/blob/main/README.md"
keywords = ["ai-agents", "project-management", "git", "workflow", "cli"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = [] }
include_dir = "0.7"
mime_guess = "2"

[profile.release]
lto = true
strip = true
opt-level = "z"