[package]
name = "apm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
