[package]
name = "apm-core"
version = "0.1.7"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
indexmap = "2"

[dev-dependencies]
tempfile = "3"
