[package]
name = "apm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
description = "Core library for APM — a git-native project manager for parallel AI coding agents."
categories = ["development-tools"]
readme = "../README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
indexmap = "2"

[dev-dependencies]
tempfile = "3"
