[package]
name = "apm"
version = "0.1.0"
edition = "2021"

[lib]
name = "apm"
path = "src/lib.rs"

[[bin]]
name = "apm"
path = "src/main.rs"

[dependencies]
apm-core = { path = "../apm-core" }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
