[package]
name = "apm"
version = "0.1.7"
edition = "2021"

[lib]
name = "apm"
path = "src/lib.rs"

[[bin]]
name = "apm"
path = "src/main.rs"

[dependencies]
apm-core = { path = "../apm-core" }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
ctrlc = "3"
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
toml_edit = { workspace = true }

[dev-dependencies]
tempfile = "3"
toml = { workspace = true }
mockito = "1"
