[package]
name = "apm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
description = "CLI project manager for running AI coding agents in parallel, isolated by design."
categories = ["command-line-utilities", "development-tools"]
readme = "../README.md"

[lib]
name = "apm"
path = "src/lib.rs"

[[bin]]
name = "apm"
path = "src/main.rs"

[dependencies]
apm-core = { path = "../apm-core", version = "0.1.9" }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
ctrlc = "3"
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
toml_edit = { workspace = true }

[dev-dependencies]
tempfile = "3"
toml = { workspace = true }
mockito = "1"
